--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "source-map-loader": "^3.0.1",
     "typescript": "^4.5.5",
     "webpack": "^5.69.0",
